--- a/xiangqi updated/src/Pages/Board.scss
+++ b/xiangqi updated/src/Pages/Board.scss
@@ -1,257 +1,139 @@
-
-.board-container {
+html, body {
+  height: 100%;
+  margin: 0;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-  width: 100%;
-  max-width: 1200px;
-  padding: 20px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  background-color: #e8e4e1; 
-  gap: 20px;
+  align-items: center;
 }
 
-.board {
-  background-size: cover;
-  width: 80vmin;
-  height: 80vmin;
+.board-container {
+  background-image: url('../assets/Board.svg');
+  background-repeat: no-repeat;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 10px 0;
+}
+
+.game-grid {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(9, 1fr);
-  gap: 2px;
-  border: 4px solid #d4a373;
-  background-color: #f7f1e1;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-.move-history {
-  width: 250px;
-  max-height: 80vmin;
-  overflow-y: auto;
-  font-size: 16px;
-  color: #333;
-  background-color: #f4f4f4; 
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-}
-
-.turn-section {
-  width: 250px;
-  background-color: #dcdcdc; 
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  margin-left: 20px; 
+.square {
+  width: 51px;
+  height: 51px;
+  float: left;
+  position: relative;
 }
 
 .row {
   display: contents;
 }
 
-.river {
-  background-color: skyblue !important;
-  border: none !important;
-  transition: none;
-}
-
 .piece {
-  width: 90%; 
-  height: 90%;
-  padding: 10%; 
-  margin: 0; 
-  border-radius: 50%;
+  font-size: 36px; 
+}
+
+.board-wrapper{
+  background-color: rgb(255, 251, 242);
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+#game-area {
+  height: calc(100% - 80px);
   display: flex;
-  align-items: center;
+  -webkit-box-pack: center;
   justify-content: center;
-  background-size: 80%; 
-  background-position: center;
-  background-repeat: no-repeat; 
-  background-origin: content-box; 
-  background-clip: content-box; 
-  transition: transform 0.3s;
-  box-sizing: border-box;
+  -webkit-box-align: center;
+  align-items: center;
 }
 
-.cell {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 5%;
-  
-  transition: background-color 0.3s, transform 0.3s;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+@media (max-width: 47.9375em) {
+   #game-area {
+      height: 100%;
+      width: 100%;
+      background-color: rgb(255, 251, 242);
+  }
+  .board-wrapper{
+    padding: 0px;
+  }
 }
 
-.cell:hover {
-  background-color: #d0a971;
-  transform: scale(1.05);
-}
-
-.piece:hover {
-  transform: scale(1.1);
-}
-
-.cell.valid-move {
-  background-color: rgba(0, 255, 0, 0.3);
-}
-
-.cell.selected {
-  background-color: rgba(255, 255, 0, 0.5);
-  border: 2px solid #00f;
-}
-
-.undo-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #e74c3c;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
+@mixin piece-style($color, $image) {
+  background-color: $color;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 5px, 
+              rgba(255, 255, 255, 0.3) 0px 4px 2px 0px inset, 
+              rgba(0, 0, 0, 0.3) 0px -3px 2px 0px inset;
+  border-radius: 100%;
+  width: 90%;
+  height: 90%;
+  margin: 5px;
+  display: block;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center center;
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.undo-button:hover {
-  background-color: #c0392b;
-  transform: scale(1.05);
-}
-
-.undo-button:disabled {
-  background-color: #bdc3c7;
-  cursor: not-allowed;
-}
-
-.move-history ul {
-  list-style: none;
-  padding: 0;
-}
-
-.move-history li {
-  margin-bottom: 8px;
-  background-color: #f0f0f0;
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.move-history li:hover {
-  background-color: #e0e0e0;
-  transform: scale(1.02);
-}
-
-.move-history ul::-webkit-scrollbar {
-  width: 8px;
-}
-
-.move-history ul::-webkit-scrollbar-track {
-  background: #f0f0f0;
-}
-
-.move-history ul::-webkit-scrollbar-thumb {
-  background-color: #d4a373;
-  border-radius: 10px;
-}
-
-.turn-indicator{
-  background-color: #e74c3c;
-  color: white;
-  border-radius: 5px;
-  padding: 10px;
-}
-
-@media (max-width: 768px) {
-  .board-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .board {
-    margin-right: 0;
-    margin-bottom: 20px;
-    width: 90vmin;
-    height: 90vmin;
-  }
-
-  .move-history, .turn-section {
-    width: 90%;
-    max-height: 60vh;
-    margin: 10px 0; 
-  }
+  background-image: url($image);
 }
 
 .r_chariot {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
 }
 
 .r_horse {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
 }
 
 .r_elephant {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
 }
 
 .r_advisor {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
 }
 
 .r_general {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
 }
 
 .r_cannon {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
 }
 
 .r_soldier {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
-  background-color: rgb(194, 53, 46);
+  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
 }
 
 .b_chariot {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
 }
 
 .b_horse {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
 }
 
 .b_elephant {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
 }
 
 .b_advisor {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
 }
 
 .b_general {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
 }
 
 .b_cannon {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
 }
 
 .b_soldier {
-  background-image: url('https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
-  background-color: black;
+  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
 }
