--- a/xiangqi updated/src/Pages/Board.scss
+++ b/xiangqi updated/src/Pages/Board.scss
@@ -6,30 +6,45 @@ html, body {
   align-items: center;
 }
 
+#game-area {
+  height: calc(100% - 80px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 251, 242);
+}
+
+.board-wrapper {
+  background-color: rgb(255, 251, 242);
+  padding: 10px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 90vw; 
+  max-height: 90vh; 
+}
+
 .board-container {
   background-image: url('../assets/Board.svg');
   background-repeat: no-repeat;
-  display: block;
-  justify-content: center;
-  align-items: center;
+  background-size: cover;
   position: relative;
-  margin: 10px 0;
+  width: 100%;
+  height: 100%;
 }
 
 .game-grid {
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(9, 1fr);
-  width: 100%;
-  height: 100%;
   position: relative;
 }
 
 .square {
-  width: 51px;
-  height: 51px;
-  float: left;
+  // width: 100%;
+  // height: 100%;
   position: relative;
+  margin: 0; 
 }
 
 .row {
@@ -40,30 +55,18 @@ html, body {
   font-size: 36px; 
 }
 
-.board-wrapper{
-  background-color: rgb(255, 251, 242);
-    padding: 10px 20px;
-    border-radius: 8px;
-}
-#game-area {
-  height: calc(100% - 80px);
-  display: flex;
-  -webkit-box-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
-}
-
 @media (max-width: 47.9375em) {
-   #game-area {
-      height: 100%;
-      width: 100%;
-      background-color: rgb(255, 251, 242);
+  #game-area {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 251, 242);
   }
-  .board-wrapper{
-    padding: 0px;
+
+  .board-wrapper {
+    padding: 0;
   }
 }
+/* Piece Styles */
 
 @mixin piece-style($color, $image) {
   background-color: $color;
@@ -75,7 +78,7 @@ html, body {
   height: 90%;
   margin: 5px;
   display: block;
-  background-size: 30px;
+  background-size: 45%;
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
