--- a/xiangqi updated/src/Pages/Board.scss
+++ b/xiangqi updated/src/Pages/Board.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
@@ -17,36 +18,36 @@ html, body {
 }
 
 .game-grid {
-  display: grid;
-  grid-template-rows: repeat(10, 1fr);
-  grid-template-columns: repeat(9, 1fr);
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   position: relative;
 }
 
 .square {
-  width: 51px;
-  height: 51px;
   float: left;
   position: relative;
+  padding: 5px;
 }
 
 .row {
-  display: contents;
+  display: flex;
+  width: 100%;
+  height: auto;
 }
 
 .piece {
-  font-size: 36px; 
+  font-size: 36px;
 }
 
-.board-wrapper{
+.board-wrapper {
   background-color: rgb(255, 251, 242);
-    padding: 10px 20px;
-    border-radius: 8px;
+  padding: 20px;
+  border-radius: 8px;
 }
+
 #game-area {
-  height: calc(100% - 80px);
   display: flex;
   -webkit-box-pack: center;
   justify-content: center;
@@ -55,31 +56,38 @@ html, body {
 }
 
 @media (max-width: 47.9375em) {
-   #game-area {
-      height: 100%;
-      width: 100%;
-      background-color: rgb(255, 251, 242);
+  #game-area {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 251, 242);
   }
-  .board-wrapper{
+
+  .board-wrapper {
     padding: 0px;
   }
 }
 
 @mixin piece-style($color, $image) {
   background-color: $color;
-  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 5px, 
-              rgba(255, 255, 255, 0.3) 0px 4px 2px 0px inset, 
-              rgba(0, 0, 0, 0.3) 0px -3px 2px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 5px,
+    rgba(255, 255, 255, 0.3) 0px 4px 2px 0px inset,
+    rgba(0, 0, 0, 0.3) 0px -3px 2px 0px inset;
   border-radius: 100%;
-  width: 90%;
-  height: 90%;
-  margin: 5px;
+  height: 100%;
   display: block;
   background-size: 30px;
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
   background-image: url($image);
+
+  @media (max-width: 47.9375em) {
+    background-size: 20px;
+  }
+
+  @media (max-height: 47.9375em) {
+    background-size: 20px;
+  }
 }
 
 .r_chariot {
