Added Absolute imports

--- a/xiangqi updated/src/App.css
+++ b/xiangqi updated/src/App.css
@@ -1,5 +1,5 @@
 body {
-    background-color:  rgb(255, 251, 242);;
+
     margin: 0;
     height: 100vh;
     display: flex;
@@ -7,3 +7,16 @@ body {
     align-items: center;
     font-family: 'Arial', sans-serif;
   }
+
+  @media (max-width: 47.9375em) {
+    #game-area {
+      height: 100%;
+      width: 100%;
+      background-color: rgb(255, 251, 242);
+    }
+  
+    .board-wrapper {
+      padding: 0px;
+    }
+  }
+  
