--- a/xiangqi updated/src/Pages/Board.scss
+++ b/xiangqi updated/src/Pages/Board.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   display: flex;
@@ -7,52 +8,11 @@ html, body {
 }
 
 #game-area {
-  height: calc(100% - 80px);
-  width: 100%;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
-  background-color: rgb(255, 251, 242);
-}
-
-.board-wrapper {
-  background-color: rgb(255, 251, 242);
-  padding: 10px;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 90vw; 
-  max-height: 90vh; 
-}
-
-.board-container {
-  background-image: url('../assets/Board.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.game-grid {
-  display: grid;
-  grid-template-rows: repeat(10, 1fr);
-  grid-template-columns: repeat(9, 1fr);
-  position: relative;
-}
-
-.square {
-  // width: 100%;
-  // height: 100%;
-  position: relative;
-  margin: 0; 
-}
-
-.row {
-  display: contents;
-}
-
-.piece {
-  font-size: 36px; 
 }
 
 @media (max-width: 47.9375em) {
@@ -61,82 +21,4 @@ html, body {
     width: 100%;
     background-color: rgb(255, 251, 242);
   }
-
-  .board-wrapper {
-    padding: 0;
-  }
-}
-/* Piece Styles */
-
-@mixin piece-style($color, $image) {
-  background-color: $color;
-  box-shadow: rgba(0, 0, 0, 0.1) 4px 4px 5px, 
-              rgba(255, 255, 255, 0.3) 0px 4px 2px 0px inset, 
-              rgba(0, 0, 0, 0.3) 0px -3px 2px 0px inset;
-  border-radius: 100%;
-  width: 90%;
-  height: 90%;
-  margin: 5px;
-  display: block;
-  background-size: 45%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  cursor: pointer;
-  background-image: url($image);
-}
-
-.r_chariot {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
-}
-
-.r_horse {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
-}
-
-.r_elephant {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
-}
-
-.r_advisor {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
-}
-
-.r_general {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
-}
-
-.r_cannon {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
-}
-
-.r_soldier {
-  @include piece-style(rgb(187, 16, 6), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
-}
-
-.b_chariot {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/rook.svg');
-}
-
-.b_horse {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/horse.svg');
-}
-
-.b_elephant {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/elephant.svg');
-}
-
-.b_advisor {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/advisor.svg');
-}
-
-.b_general {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/king.svg');
-}
-
-.b_cannon {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/cannon.svg');
-}
-
-.b_soldier {
-  @include piece-style(rgb(31, 31, 31), 'https://d2g1zxtf4l76di.cloudfront.net/images/pieces/pawn.svg');
 }
