--- a/xiangqi updated/src/Pages/Board.scss
+++ b/xiangqi updated/src/Pages/Board.scss
@@ -6,7 +6,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 #game-area {
   display: flex;
   -webkit-box-pack: center;
@@ -14,6 +13,20 @@ body {
   -webkit-box-align: center;
   align-items: center;
 }
+
+.turn-indicator {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
+
 
 @media (max-width: 47.9375em) {
   #game-area {
