--- a/xiangqi updated/src/Components/BoardComponents/Square.scss
+++ b/xiangqi updated/src/Components/BoardComponents/Square.scss
@@ -4,14 +4,42 @@
   position: relative;
   padding: 5px;
 }
-.square.dragging {
-  opacity: 0.5; 
+
+.square.selected {
+  border: 4px solid rgb(233, 150, 0);  
+  border-radius: 100%;
 }
 
+.square.dragging {
+  opacity: 0;
+  border: 4px solid rgb(233, 150, 0); 
+}
+
+.square.highlight {
+  position: relative; 
+}
+
+.square.highlight::after {
+  content: "";
+  position: absolute;
+  top: 40%; 
+  left: 50%;
+  right: 50%; 
+  transform: translate(-50%, -50%); 
+  width: 35px; 
+  height: 35px; 
+  background-color: blue;
+  border-radius: 50%; 
+}
 
 .piece {
   font-size: 36px;
 }
+
+.dragging {
+  opacity: 0;
+}
+
 
 
 @mixin piece-style($color, $image) {
